--- a/out_put/index.html
+++ b/out_put/index.html
@@ -6,25 +6,20 @@
 </head>
 <body>
 
-	<div class="Contents" id="LoadingPage">
-		<div id="LoadingItemBox">
-			<div class="LoadingItems" id="LoadingItem1"></div>
-			<div class="LoadingItems" id="LoadingItem2"></div>
-			<div class="LoadingItems" id="LoadingItem3"></div>
-			<div class="LoadingItems" id="LoadingItem4"></div>
-			<div class="LoadingItems" id="LoadingItem5"></div>
-			<div class="LoadingItems" id="LoadingItem6"></div>
-			<div class="LoadingItems" id="LoadingItem7"></div>
-			<div class="LoadingItems" id="LoadingItem8"></div>
-			<div class="LoadingItems" id="LoadingItem9"></div>
-			<div class="LoadingItems" id="LoadingItem10"></div>
-			<div class="LoadingItems" id="LoadingItem11"></div>
-			<div class="LoadingItems" id="LoadingItem12"></div>
-			<div class="LoadingItems" id="LoadingItem13"></div>
-			<div class="LoadingItems" id="LoadingItem14"></div>
-			<div class="LoadingItems" id="LoadingItem15"></div>
-			<div class="LoadingItems" id="LoadingItem16"></div>
+	<video src="IMG/back.mp4" id="ContentBackVideo" loop autoplay></video>
+
+	<div class="Contents" id="Content1">
+		
+		<div id="Content1Header1">JC・JK</div>
+
+		<div id="Content1HeaderSlashBox">
+			
+			<div id="Content1HeaderSlash"></div>
+
 		</div>
+
+		<div id="Content1Header2">調査隊</div>
+
 	</div>
 
 	<script type="text/javascript" src="bundle.js"></script>
