--- a/out_put/index.html
+++ b/out_put/index.html
@@ -9,16 +9,20 @@
 	<video src="IMG/back.mp4" id="ContentBackVideo" loop autoplay></video>
 
 	<div class="Contents" id="Content1">
-		
-		<div id="Content1Header1">JC・JK</div>
 
-		<div id="Content1HeaderSlashBox">
-			
-			<div id="Content1HeaderSlash"></div>
+		<img src="IMG/logo.png" id="Content1Logo">
 
+		<div id="Content1SubHeader">
+			「JC・JK」と「マーケティング」を組み合わせて<br>
+			「新しい」を作る
 		</div>
 
-		<div id="Content1Header2">調査隊</div>
+		<div id="Content1HeaderBottomArrow"></div>
+
+	</div>
+
+
+	<div class="Contents" id="Content2">
 
 	</div>
 
