--- a/out_put/index.html
+++ b/out_put/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WebPack Temp.</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
 
@@ -13,8 +15,7 @@
 		<img src="IMG/logo.png" id="Content1Logo">
 
 		<div id="Content1SubHeader">
-			「JC・JK」と「マーケティング」を組み合わせて<br>
-			「新しい」を作る
+			CJK調査隊は、今後のさらなる発展のため、<br>学生運営スタッフ及びマーケティングサポーターの募集を致します。
 		</div>
 
 		<button id="Content1Btn">
@@ -26,6 +27,24 @@
 	</div>
 
 
+
+	<div class="Contents" id="Content5">
+
+		<div id="Content5HeaderBorderTop"></div>
+		<div id="Content5Header">About</div>
+
+		<div id="Content5TextBox">
+			「JCJK調査隊」では、今後より一層の発展をなすべく、学生運営スタッフを募集いたします。<br>
+			これまでのJCJK調査隊の活動は各企業様からの依頼を受けて仕事をするというものでした。<br><br>
+			今後のJCJK調査隊は、自らが価値を提案できるような集団に変わろうと考えております。<br>
+			また、運営、財政、広報等もすべて学生主体で行います。<br>
+			大学のサークルのような生半可なものではありません。<br>
+			社会に関わる一集団として、「JCJK調査隊」を本気で考えてくれるような方を募集します。<br><br><br><br><br>
+		</div>
+
+
+	</div>
+
 	<div class="Contents" id="Content2">
 	
 		<img src="IMG/shiiki.jpg" id="Content2Left">
@@ -34,16 +53,10 @@
 
 			<div id="Content2HeaderBorderTop"></div>
 			<div id="Content2Header">
-				JC・JK調査隊って何？<br>
-				何ができるの？ 何をしている団体なの？
+				JCJK調査隊とは？
 			</div>
 			<div id="Content2TextBox">
-				　JCJKの調査隊とは、「現役女子高生社長」でおなじみ椎木里佳が提案する「JCJKのための、JCJKによる、カワイイを発信する集団」です。沢山のご支援により、発足以来、Yahoo!など各企業様に対するマーケティングサポート、TVなど数々のメディア出演など、日々活動の場を広げています。<br><br>
-
-				　「JCJK調査隊」では、今後より一層の発展をなすべく、学生運営スタッフを募集いたします。これまでのJCJK調査隊の活動は各企業様からの依頼を受けて仕事をするというものでした。今後のJCJK調査隊は、自らが価値を提案できるような集団に変わろうと考えております。また、運営、財政、広報等もすべて学生主体で行います。大学のサークルのような生半可なものではありません。社会に関わる一集団として、「JCJK調査隊」を本気で考えてくれるような方を募集します。「JCJK調査隊を通じてビジネスを学びたい」「JCJK調査隊を自分の手で大きくしたい」どんな理由でも構いません。皆様のご応募をお待ちしております。<br><br>
-
-				　また、JCJK調査隊＜第四期生＞の募集も致します。「TVに出てみたい！」「椎木里佳に会ってみたい！」「ビジネスについて学びたい！」少しでも興味がある方はお気軽にご応募ください。皆様のご参加をメンバー一同心よりお待ちしております
-
+				JCJKの調査隊とは、「現役女子高生社長」でおなじみ椎木里佳が提案する「JCJKのための、JCJKによる、カワイイを発信する集団」です。沢山のご支援により、発足以来、Yahoo!など各企業様に対するマーケティングサポート、TVなど数々のメディア出演など、日々活動の場を広げています。
 			</div>
 		</div>
 
@@ -51,27 +64,148 @@
 
 	</div>
 
+	<div class="Contents" id="Content6">
+
+		<div id="Content5HeaderBorderTop"></div>
+		<div id="Content5Header">Works</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">desktop_mac</i><br>
+			<div class="Content6ItemHeader">
+				IT部門
+			</div>
+			JCJK調査隊の実働部隊として、ITの力を活用した広報活動をしていきます。。メディアコンテンツの企画・運営を行っています。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">wifi</i><br>
+			<div class="Content6ItemHeader">
+				広報部門
+			</div>
+			JCJK調査隊の顔となって実際に様々な会社や組織へと趣き、調査隊の活動を広めます。営業活動及び広報活動を行います。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">people_outline</i><br>
+			<div class="Content6ItemHeader">
+				総務部門
+			</div>
+			JCJK調査隊の中心的組織として調査隊を支えます。調査隊の運営、戦略の決定、各種事務手続き等を行います。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">phone_in_talk</i><br>
+			<div class="Content6ItemHeader">
+				リサーチ部門
+			</div>
+			JCJK調査隊の代表的な仕事であるJCJK市場の調査を中心にマーケティングサポートを行います。市場調査を行い、の統計を取ります。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">priority_high</i><br>
+			<div class="Content6ItemHeader">
+				プランニング部門
+			</div>
+			新しい事業を提案し、JCJK調査隊のより一層の発展を図ります。
+		</div>
+
+		<div style="clear: both;"></div>
+
+	</div>
+
+	<div class="Contents" id="Content7">
+
+		<div id="Content7HeaderBorderTop"></div>
+		<div id="Content7Header">Apply</div>
+
+		<div class="ContentTextLeft">
+			□参加資格<br>
+			・2016年4月の時点で、高校3年生以下の女性の方<br>
+			・週１以上の参加が可能な方<br><br>
+
+			□求められる人物像<br>
+			・組織の運営をしてみたい方<br>
+			・YouTube等のメディアを作りたい方<br>
+			・JCJK調査隊として広報をしたい方<br>
+			・JCJK調査隊の調査をしてみたい方<br>
+			・自分の能力を伸ばしたい方<br>
+			※メディアへの出演は可能でなくとも構いません。<br>
+			※どんな理由でも構いません。お気軽にご応募ください！<br><br>
+
+			□活動までの流れ<br>
+			１）書類選考（一次選考）<br>
+			２）面接試験（二次選考）<br>
+			３）結果発表…後日メールにて通知<br><br>
+
+			※日程などの詳細は後日発表予定<br><br>
+
+			□応募フォーム<br>
+			・名前（ふりがな）<br>
+			・学校名・学年<br>
+			・自分が写っている顔写真（自撮り可・プリクラ不可）<br>
+			・運営をやりたいか・メンバーになりたいか（併願も可）<br>
+			・JCJK調査隊に入ったら何をやってみたいか<br>
+			・自己PR<br><br><br><br><br><br>
+
+		</div>
+
+	</div>
+
+	<div class="Contents" id="Content8">
+
+		<div id="Content7HeaderBorderTop"></div>
+		<div id="Content7Header"><span id="Content7Header1">Q</span> & <span id="Content7Header2">A</span></div>
+
+		<div class="ContentTextLeft">
+			
+			<span class="Content7Q">Q,</span>部活などで殆ど参加できないかもしれません<br>
+
+			<span class="Content7A">A,</span>週に一回でも参加できれば大丈夫です。<br><br><br>
+
+			<span class="Content7Q">Q,</span>大学受験があり、途中でやめてしまうかもしれません<br>
+
+			<span class="Content7A">A,</span>問題ありません。それも考慮した仕事をしていただきます。<br><br><br>
+
+			<span class="Content7Q">Q,</span>給料は出ますか？<br>
+
+			<span class="Content7A">A,</span>現在その予定はございません<br><br><br>
+
+			<span class="Content7Q">Q,</span>交通費は出ますか？<br>
+
+			<span class="Content7A">A,</span>現在その予定はございません<br><br><br>
+
+			<span class="Content7Q">Q,</span>東京に行くのは難しいのですが、参加できますか？<br>
+
+			<span class="Content7A">A,</span>可能です。現在地方版JCJK調査隊の企画を検討中です。<br><br><br>
+		</div>
+	</div>
 
 	<div class="Contents" id="Content3">
 		<div id="Content3HeaderBorderTop"></div>
 		<div id="Content3Header">主な取引先・協賛企業</div>
 
-		<img src="IMG/logo.png" class="Content3Img1">
-		<img src="IMG/logo.png" class="Content3Img1">
-		<img src="IMG/logo.png" class="Content3Img1">
-		<img src="IMG/logo.png" class="Content3Img2">
-		<img src="IMG/logo.png" class="Content3Img2">
-		<img src="IMG/logo.png" class="Content3Img2">
-		<img src="IMG/logo.png" class="Content3Img2">
+		<img src="IMG/img7.png" class="Content3Img1">
+		<img src="IMG/img4.png" class="Content3Img1">
+		<img src="IMG/img5.png" class="Content3Img1">
+		<img src="IMG/img6.png" class="Content3Img2">
+		<img src="IMG/img3.png" class="Content3Img2">
+		<img src="IMG/img2.png" class="Content3Img2">
+		<img src="IMG/img1.png" class="Content3Img2">
+
+		<div style="clear: both;"></div>
+
 	</div>
 
 	<div class="Contents" id="Content4">
 
 		<div id="Content4HeaderBorderTop"></div>
-		<div id="Content4Header">コンタクト</div>
+		<div id="Content4Header">ご応募フォーム</div>
 
 		<input class="Content4Inputs" placeholder="お名前"></input>
 		<input class="Content4Inputs" placeholder="ふりがな"></input>
+		<input class="Content4Inputs" placeholder="御住まいの都道府県"></input>
+		<input class="Content4Inputs" placeholder="学校名"></input>
+		<input class="Content4Inputs" placeholder="学年"></input>
 		<input class="Content4Inputs" placeholder="メールアドレス"></input>
 		<input class="Content4Inputs" placeholder="電話番号"></input>
 		<textarea id="Content4TextArea" placeholder="本文"></textarea>
