--- a/out_put/index.html
+++ b/out_put/index.html
@@ -182,7 +182,7 @@
 
 	<div class="Contents" id="Content3">
 		<div id="Content3HeaderBorderTop"></div>
-		<div id="Content3Header">主な取引先・協賛企業</div>
+		<div id="Content3Header">主な取引先企業</div>
 
 		<img src="IMG/img7.png" class="Content3Img1">
 		<img src="IMG/img4.png" class="Content3Img1">
