--- a/out_put/index.html
+++ b/out_put/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>WebPack Temp.</title>
+	<title>【募集中!!】JC・JK調査隊!!</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 </head>
