--- a/out_put/index.html
+++ b/out_put/index.html
@@ -15,7 +15,9 @@
 		<img src="IMG/logo.png" id="Content1Logo">
 
 		<div id="Content1SubHeader">
-			CJK調査隊は、今後のさらなる発展のため、<br>学生運営スタッフ及びマーケティングサポーターの募集を致します。
+			JCJK調査隊は、今後のさらなる発展のため、<br>
+			学生運営スタッフの募集を致します。
+
 		</div>
 
 		<button id="Content1Btn">
@@ -34,12 +36,16 @@
 		<div id="Content5Header">About</div>
 
 		<div id="Content5TextBox">
-			「JCJK調査隊」では、今後より一層の発展をなすべく、学生運営スタッフを募集いたします。<br>
-			これまでのJCJK調査隊の活動は各企業様からの依頼を受けて仕事をするというものでした。<br><br>
-			今後のJCJK調査隊は、自らが価値を提案できるような集団に変わろうと考えております。<br>
-			また、運営、財政、広報等もすべて学生主体で行います。<br>
-			大学のサークルのような生半可なものではありません。<br>
-			社会に関わる一集団として、「JCJK調査隊」を本気で考えてくれるような方を募集します。<br><br><br><br><br>
+			今回、「JCJK調査隊」では、今後より一層の発展をなすべく、<br>
+			今までのマーケティングサポートにかかわるスタッフの他に、学生運営スタッフを募集致します。<br>
+			これまでのJCJK調査隊は、各企業様から依頼を受け、<br>
+			女子中高生のリアルな声をお届けするというかたちで活動して参りました。<br>
+			そして今回、JCJK調査隊は、各企業様に対して更なるマーケティングサポートをするべく、<br>
+			新たな自社コンテンツの開発をはじめとする、事業の拡大を図ります。<br>
+			それに伴って、組織の円滑な運営を行うための学生運営スタッフを募集致します。<br>
+			運営はもちろんのこと、財政、広報などすべての仕事を学生主体で行っていきます。
+			<br>世界に自分たちJCJKの声を伝えていく、<br>
+			そんな「JCJK調査隊」を本気で考えてくれるような方、来たれ！。<br><br><br><br><br>
 		</div>
 
 
@@ -56,7 +62,7 @@
 				JCJK調査隊とは？
 			</div>
 			<div id="Content2TextBox">
-				JCJKの調査隊とは、「現役女子高生社長」でおなじみ椎木里佳が提案する「JCJKのための、JCJKによる、カワイイを発信する集団」です。沢山のご支援により、発足以来、Yahoo!など各企業様に対するマーケティングサポート、TVなど数々のメディア出演など、日々活動の場を広げています。
+				JCJK調査隊とは、日本人で唯一10代で「Forbes Asia 2016 30 Under 30」を獲得するなど今話題の、女子大生起業家・椎木里佳が提案した「女子中高生による、女子中高生のための、カワイイを発信する集団」です。渋谷・原宿を中心とした日本の「カワイイ・カルチャー」を国内外に発信する活動を行っている他、様々な企業様と協力し、女子中高生のコンテンツなども作成しております。沢山のご支援により、発足以来、リクルート・Yahoo!など各企業様に対するマーケティングサポート、フロム・エーナビ「パン田一郎」スタンプをはじめとするコンテンツのプロデュース、日テレ系「しゃべくり００７」などメディアへの出演など、日々活動の場を広げています。
 			</div>
 		</div>
 
@@ -69,44 +75,56 @@
 		<div id="Content5HeaderBorderTop"></div>
 		<div id="Content5Header">Works</div>
 
-		<div class="Content6ItemBox">
-			<i class="material-icons">desktop_mac</i><br>
-			<div class="Content6ItemHeader">
-				IT部門
-			</div>
-			JCJK調査隊の実働部隊として、ITの力を活用した広報活動をしていきます。。メディアコンテンツの企画・運営を行っています。
-		</div>
-
-		<div class="Content6ItemBox">
-			<i class="material-icons">wifi</i><br>
-			<div class="Content6ItemHeader">
-				広報部門
-			</div>
-			JCJK調査隊の顔となって実際に様々な会社や組織へと趣き、調査隊の活動を広めます。営業活動及び広報活動を行います。
+		<div id="Content5TextBox">
+			入って頂いたスタッフの方には、6つの部署に別れていただきます。
 		</div>
 
 		<div class="Content6ItemBox">
 			<i class="material-icons">people_outline</i><br>
 			<div class="Content6ItemHeader">
-				総務部門
+				総務部門<br><br>
 			</div>
-			JCJK調査隊の中心的組織として調査隊を支えます。調査隊の運営、戦略の決定、各種事務手続き等を行います。
+			JCJK調査隊の頭脳的ポジで最も中心的な組織として調査隊を支えます。調査隊の運営、管理を行います。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">wifi</i><br>
+			<div class="Content6ItemHeader">
+				広報部門<br><br>
+			</div>
+			JCJK調査隊の顔となって実際に様々な会社や組織へと趣き、調査隊の活動を広めます。営業活動及び広報活動を行います。
 		</div>
 
 		<div class="Content6ItemBox">
 			<i class="material-icons">phone_in_talk</i><br>
 			<div class="Content6ItemHeader">
-				リサーチ部門
+				リサーチ部門<br><br>
 			</div>
-			JCJK調査隊の代表的な仕事であるJCJK市場の調査を中心にマーケティングサポートを行います。市場調査を行い、の統計を取ります。
+			JCJK調査隊の女子中高生の文化、トレンドを今を調べて世の中に伝えていく、いわゆるマーケティングサポートを行っていきます。JCJKの文化を調べ、そのデータの処理・分析を行います。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">desktop_mac</i><br>
+			<div class="Content6ItemHeader">
+				IT部門<br><br>
+			</div>
+			JCJK調査隊のインテリ系()実働部隊として、ITの力を活用した広報活動をします。メディアコンテンツの企画・運営を行います。
 		</div>
 
 		<div class="Content6ItemBox">
 			<i class="material-icons">priority_high</i><br>
 			<div class="Content6ItemHeader">
-				プランニング部門
+				プランニング部門<br><br>
 			</div>
-			新しい事業を提案し、JCJK調査隊のより一層の発展を図ります。
+			JCJK調査隊でやったら最高に面白そうな事業を提案し、JCJK調査隊のより一層の更なる発展を図ります。事業の提案とその初期作業を行います。
+		</div>
+
+		<div class="Content6ItemBox">
+			<i class="material-icons">priority_high</i><br>
+			<div class="Content6ItemHeader">
+				マーケティング<br>サポート部門
+			</div>
+			運営に参加するのは厳しいけれど、JCJKを発信していきたい！という人たちのための、調査隊が出動するときにのみ参加する部門。企業様の声を実際に聞いたり、ＪＣＪＫたちの声を現場に伝えます。
 		</div>
 
 		<div style="clear: both;"></div>
