--- a/out_put/index.html
+++ b/out_put/index.html
@@ -163,7 +163,10 @@
 			・自分が写っている顔写真（自撮り可・プリクラ不可）<br>
 			・運営をやりたいか・メンバーになりたいか（併願も可）<br>
 			・JCJK調査隊に入ったら何をやってみたいか<br>
-			・自己PR<br><br><br><br><br><br>
+			・自己PR<br><br>
+
+			質問、ご連絡等ございました、こちらまで！！<br>
+			jcjk.research.unit@gmail.com<br><br><br><br><br><br>
 
 		</div>
 
