--- a/out_put/index.html
+++ b/out_put/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>【募集中!!】JC・JK調査隊!!</title>
+	<title>JC・JK調査隊!!</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 </head>
@@ -62,7 +62,7 @@
 				JCJK調査隊とは？
 			</div>
 			<div id="Content2TextBox">
-				JCJK調査隊とは、日本人で唯一10代で「Forbes Asia 2016 30 Under 30」を獲得するなど今話題の、女子大生起業家・椎木里佳が提案した「女子中高生による、女子中高生のための、カワイイを発信する集団」です。渋谷・原宿を中心とした日本の「カワイイ・カルチャー」を国内外に発信する活動を行っている他、様々な企業様と協力し、女子中高生のコンテンツなども作成しております。沢山のご支援により、発足以来、リクルート・Yahoo!など各企業様に対するマーケティングサポート、フロム・エーナビ「パン田一郎」スタンプをはじめとするコンテンツのプロデュース、日テレ系「しゃべくり００７」などメディアへの出演など、日々活動の場を広げています。
+				JCJK調査隊とは、日本人で唯一10代で「Forbes Asia 2016 30 Under 30」を獲得するなど今話題の、女子大生起業家・椎木里佳が組織した「女子中高生による、女子中高生のための、カワイイを発信する集団」です。渋谷・原宿を中心とした日本の「カワイイ・カルチャー」を国内外に発信する活動を行っている他、様々な企業様と協力し、女子中高生のコンテンツなども作成しております。沢山のご支援により、発足以来、リクルート・Yahoo!など各企業様に対するマーケティングサポート、フロム・エーナビ「パン田一郎」スタンプをはじめとするコンテンツのプロデュース、TBS系「サンデー・ジャポン」などメディアへの出演等、日々活動の場を広げています。
 			</div>
 		</div>
 
@@ -84,7 +84,7 @@
 			<div class="Content6ItemHeader">
 				総務部門<br><br>
 			</div>
-			JCJK調査隊の頭脳的ポジで最も中心的な組織として調査隊を支えます。調査隊の運営、管理を行います。
+			JCJK調査隊の司令塔的な組織として調査隊を支えます。調査隊の運営、管理を行います。
 		</div>
 
 		<div class="Content6ItemBox">
@@ -92,7 +92,7 @@
 			<div class="Content6ItemHeader">
 				広報部門<br><br>
 			</div>
-			JCJK調査隊の顔となって実際に様々な会社や組織へと趣き、調査隊の活動を広めます。営業活動及び広報活動を行います。
+			JCJK調査隊の顔となって実際に様々な会社や組織へと行き、営業活動及び広報活動を行います。
 		</div>
 
 		<div class="Content6ItemBox">
@@ -100,7 +100,7 @@
 			<div class="Content6ItemHeader">
 				リサーチ部門<br><br>
 			</div>
-			JCJK調査隊の女子中高生の文化、トレンドを今を調べて世の中に伝えていく、いわゆるマーケティングサポートを行っていきます。JCJKの文化を調べ、そのデータの処理・分析を行います。
+			女子中高生の文化、トレンドを調べて世の中に伝えていく調査隊の中心的な活動を行っていきます。
 		</div>
 
 		<div class="Content6ItemBox">
@@ -108,7 +108,7 @@
 			<div class="Content6ItemHeader">
 				IT部門<br><br>
 			</div>
-			JCJK調査隊のインテリ系()実働部隊として、ITの力を活用した広報活動をします。メディアコンテンツの企画・運営を行います。
+			ITの力を活用したJCJK調査隊の広報活動を行います。メディアコンテンツの企画・運営を行います。
 		</div>
 
 		<div class="Content6ItemBox">
@@ -116,7 +116,7 @@
 			<div class="Content6ItemHeader">
 				プランニング部門<br><br>
 			</div>
-			JCJK調査隊でやったら最高に面白そうな事業を提案し、JCJK調査隊のより一層の更なる発展を図ります。事業の提案とその初期作業を行います。
+			魅力的な事業を提案し、JCJK調査隊の更なる発展を図ります。企画の提案と初期事業を行います。
 		</div>
 
 		<div class="Content6ItemBox">
@@ -124,7 +124,7 @@
 			<div class="Content6ItemHeader">
 				マーケティング<br>サポート部門
 			</div>
-			運営に参加するのは厳しいけれど、JCJKを発信していきたい！という人たちのための、調査隊が出動するときにのみ参加する部門。企業様の声を実際に聞いたり、ＪＣＪＫたちの声を現場に伝えます。
+			運営に参加するのは厳しいけど、調査隊に参加したいという人たちのための部署。女子中高生のリアルな声を現場に届ける活動を行います。
 		</div>
 
 		<div style="clear: both;"></div>
@@ -188,10 +188,6 @@
 			<span class="Content7A">A,</span>問題ありません。それも考慮した仕事をしていただきます。<br><br><br>
 
 			<span class="Content7Q">Q,</span>給料は出ますか？<br>
-
-			<span class="Content7A">A,</span>現在その予定はございません<br><br><br>
-
-			<span class="Content7Q">Q,</span>交通費は出ますか？<br>
 
 			<span class="Content7A">A,</span>現在その予定はございません<br><br><br>
 
