--- a/out_put/index.html
+++ b/out_put/index.html
@@ -53,7 +53,7 @@
 
 	<div class="Contents" id="Content2">
 	
-		<img src="IMG/shiiki.jpg" id="Content2Left">
+		<img src="IMG/11.jpg" id="Content2Left">
 
 		<div id="Content2Right">
 
@@ -96,7 +96,7 @@
 		</div>
 
 		<div class="Content6ItemBox">
-			<i class="material-icons">phone_in_talk</i><br>
+			<i class="material-icons">timeline</i><br>
 			<div class="Content6ItemHeader">
 				リサーチ部門<br><br>
 			</div>
@@ -120,9 +120,9 @@
 		</div>
 
 		<div class="Content6ItemBox">
-			<i class="material-icons">priority_high</i><br>
+			<i class="material-icons">record_voice_over</i><br>
 			<div class="Content6ItemHeader">
-				マーケティング<br>サポート部門
+				マーケティング<br>サポーターズ
 			</div>
 			運営に参加するのは厳しいけど、調査隊に参加したいという人たちのための部署。女子中高生のリアルな声を現場に届ける活動を行います。
 		</div>
