--- a/out_put/index.html
+++ b/out_put/index.html
@@ -45,7 +45,7 @@
 			それに伴って、組織の円滑な運営を行うための学生運営スタッフを募集致します。<br>
 			運営はもちろんのこと、財政、広報などすべての仕事を学生主体で行っていきます。
 			<br>世界に自分たちJCJKの声を伝えていく、<br>
-			そんな「JCJK調査隊」を本気で考えてくれるような方、来たれ！。<br><br><br><br><br>
+			そんな「JCJK調査隊」を本気で考えてくれるような方、来たれ。<br><br><br><br><br>
 		</div>
 
 
