--- a/out_put/index.html
+++ b/out_put/index.html
@@ -43,7 +43,7 @@
 			そして今回、JCJK調査隊は、各企業様に対して更なるマーケティングサポートをするべく、<br>
 			新たな自社コンテンツの開発をはじめとする、事業の拡大を図ります。<br>
 			それに伴って、組織の円滑な運営を行うための学生運営スタッフを募集致します。<br>
-			運営はもちろんのこと、財政、広報などすべての仕事を学生主体で行っていきます。
+			調査隊の運営はもちろんのこと、財政、広報などすべての仕事を学生主体で行っていきます。
 			<br>世界に自分たちJCJKの声を伝えていく、<br>
 			そんな「JCJK調査隊」を本気で考えてくれるような方、来たれ！<br><br><br><br><br>
 		</div>
@@ -138,7 +138,7 @@
 
 		<div class="ContentTextLeft">
 			□参加資格<br>
-			・2016年4月の時点で、高校3年生以下の女性の方<br>
+			・2016年4月の時点で、中学１年生以上高校3年生以下の女性の方<br>
 			・週１以上の参加が可能な方<br><br>
 
 			□求められる人物像<br>
