--- a/out_put/index.html
+++ b/out_put/index.html
@@ -5,8 +5,11 @@
 	<title>JC・JK調査隊!!</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <meta name="viewport" content="width=1024" />
 </head>
 <body>
+
+	<img src="IMG/back.gif" id="BackImg">
 	
 	<div class="Contents" id="Content1">
 
