--- a/out_put/index.html
+++ b/out_put/index.html
@@ -72,7 +72,7 @@
 		<div class="ContentsHeaderCenter" style="color: #000">
 			Works
 		</div>
-		<div class="ContentsTextCenter">
+		<div class="ContentsTextCenter" style="color: #000">
 			入って頂いたスタッフの方には、6つの部署に別れていただきます。
 		</div>
 
