--- a/out_put/index.html
+++ b/out_put/index.html
@@ -72,8 +72,8 @@
 		<div class="ContentsHeaderCenter" style="color: #000">
 			Works
 		</div>
-		<div class="ContentsTextCenter" style="color: #000">
-			入って頂いたスタッフの方には、6つの部署に別れていただきます。
+		<div class="ContentsTextCenter" style="line-height: 2; color: #000">
+			入って頂いたスタッフの方には、<br>6つの部署に別れていただきます。<br><br>
 		</div>
 
 		<div class="Content4ItemBox">
